--- a/ticket/message.twig
+++ b/ticket/message.twig
@@ -42,40 +42,37 @@
 			</div>
 
 			{% for attachment in message.attachments %}
-				<li class="sp-flex" data-download-url="{{ attachment.direct_frontend_url }}" data-filename="{{ attachment.original_name }}">
-					<div class="sp-me-2 sp-truncate">
+				<li class="sp-flex" data-download-url="{{ attachment.direct_frontend_url }}" data-filename="{{ attachment.original_name }}" style="width: 100%;">
+					<div class="sp-me-2 sp-truncate" style="flex: 1; min-width: 0;">
 						{% if attachment.upload.isPreviewable() %}
 							{% if attachment.upload.isPreviewableVideo() or attachment.upload.isPreviewableAudio() %}
 								<a class="sp-attachment-preview"
 								   data-video='{"source": [{"src":"{{ attachment.previewFrontendUrl(true) }}", "type":"{{ attachment.upload.mime }}"}], "attributes": {"preload": false, "controls": true}}'
 						   		   data-download-url="{{ attachment.direct_frontend_url }}"
-						   		   style="text-decoration: none; color: inherit;">
+						   		   style="text-decoration: none; color: inherit; display: flex; align-items: center; width: 100%;">
 							{% else %}
 								<a class="{% if attachment.upload.isPreviewableImage() %}sp-attachment-preview{% endif %}"
 						   		   {% if not attachment.upload.isPreviewableImage() %}target="_blank"{% endif %}
 						           href="{{ attachment.previewFrontendUrl(true) }}"
 						           data-download-url="{{ attachment.direct_frontend_url }}"
-						           style="text-decoration: none; color: inherit;">
+						           style="text-decoration: none; color: inherit; display: flex; align-items: center; width: 100%;">
 							{% endif %}
 						{% else %}
-							<a href="{{ attachment.direct_frontend_url }}" style="text-decoration: none; color: inherit;">
+							<a href="{{ attachment.direct_frontend_url }}" style="text-decoration: none; color: inherit; display: flex; align-items: center; width: 100%;">
 						{% endif %}
-							<i class="fas fa-file"></i>&nbsp;
-							<span class="sp-file-information">
+							<span class="sp-file-information" style="display: inline-flex; align-items: center; gap: 0.25rem;">
 								<span class="sp-filename">{{ attachment.original_name }}</span>
 								<span class="sp-description sp-filesize">({{ attachment.upload.size }})</span>
 							</span>
 						</a>
 					</div>
 					{% if message.by != 0 %}
-						<div class="sp-delete-attachment sp-bg-red-600"
-							 title="{{ Lang.get('general.delete') }}"
-							 data-url="{{ route('ticket.frontend.attachment.destroy') }}"
-							 data-token="{{ Request.input('token', '') }}"
-							 data-attachment-id="{{ attachment.id }}"
-							 data-hash="{{ attachment.upload_hash }}">
-							<i class="fas fa-times sp-text-white"></i>
-						</div>
+						<span class="sp-remove-attachment-text" 
+							  style="color: #ef4444; font-size: 0.75rem; margin-left: 0.5rem; cursor: pointer; text-decoration: underline; flex-shrink: 0;"
+							  data-url="{{ route('ticket.frontend.attachment.destroy') }}"
+							  data-token="{{ Request.input('token', '') }}"
+							  data-attachment-id="{{ attachment.id }}"
+							  data-hash="{{ attachment.upload_hash }}">(Remove)</span>
 					{% endif %}
 				</li>
 			{% endfor %}
