--- a/ticket/message.twig
+++ b/ticket/message.twig
@@ -42,22 +42,22 @@
 			</div>
 
 			{% for attachment in message.attachments %}
-				<li class="sp-flex" data-download-url="{{ attachment.direct_frontend_url }}" data-filename="{{ attachment.original_name }}" style="width: 100%;">
+				<li class="sp-flex" data-download-url="{{ attachment.direct_frontend_url }}" data-filename="{{ attachment.original_name }}" style="width: 100%; align-items: center;">
 					{% if attachment.upload.isPreviewable() %}
 						{% if attachment.upload.isPreviewableVideo() or attachment.upload.isPreviewableAudio() %}
 							<a class="sp-attachment-preview"
 							   data-video='{"source": [{"src":"{{ attachment.previewFrontendUrl(true) }}", "type":"{{ attachment.upload.mime }}"}], "attributes": {"preload": false, "controls": true}}'
 					   		   data-download-url="{{ attachment.direct_frontend_url }}"
-					   		   style="text-decoration: none; color: inherit; display: inline-flex; align-items: center;">
+					   		   style="text-decoration: none; color: inherit; display: flex; align-items: center; flex: 1; min-width: 0;">
 						{% else %}
 							<a class="{% if attachment.upload.isPreviewableImage() %}sp-attachment-preview{% endif %}"
 					   		   {% if not attachment.upload.isPreviewableImage() %}target="_blank"{% endif %}
 					           href="{{ attachment.previewFrontendUrl(true) }}"
 					           data-download-url="{{ attachment.direct_frontend_url }}"
-					           style="text-decoration: none; color: inherit; display: inline-flex; align-items: center;">
+					           style="text-decoration: none; color: inherit; display: flex; align-items: center; flex: 1; min-width: 0;">
 						{% endif %}
 					{% else %}
-						<a href="{{ attachment.direct_frontend_url }}" style="text-decoration: none; color: inherit; display: inline-flex; align-items: center;">
+						<a href="{{ attachment.direct_frontend_url }}" style="text-decoration: none; color: inherit; display: flex; align-items: center; flex: 1; min-width: 0;">
 					{% endif %}
 						<span class="sp-file-information" style="display: inline-flex; align-items: center; gap: 0.25rem; white-space: nowrap;">
 							<span class="sp-filename">{{ attachment.original_name }}</span>
